--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a href="https://ton.org/"><img width="48" src="./assets/tapps.png" alt="logo of telegram web apps"></a>
         </div>
         <h1>Modals</h1>
-        <button onclick="Telegram.WebApp.showAlert('Hello World!');">Launch Alert</button>
+        <button onclick="Telegram.WebApp.showAlert('Hello CTHunter!');">Launch Alert</button>
         <button onclick="showPopup();">Launch Popup</button>
 
         <h1>Links</h1>
@@ -114,7 +114,7 @@
         function showPopup() {
             Telegram.WebApp.showPopup({
                 title: 'Title',
-                message: 'Some message',
+                message: 'My Name is First Telegram Mini App Designed by Arash Ataei',
                 buttons: [
                     {id: 'link', type: 'default', text: 'Open ton.org'},
                     {type: 'cancel'},
