--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>MineSweeper | a Minesweeper is about to BOOM!</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
             --bg-color: var(--tg-theme-bg-color);
